Date comparator, only save new news to DB.